--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 language: php
 
 php:
-  - nightly
+  - 7.0
   - 5.6
   - 5.5
   - 5.4
@@ -12,14 +12,22 @@ php:
 
 matrix:
   allow_failures:
-    - php: nightly
+    - php: 7.0
+    - php: hhvm
+  fast_finish: true
 
 env:
   - WP_VERSION=latest WP_MULTISITE=0
+  - WP_VERSION=latest WP_MULTISITE=1
   - WP_VERSION=4.1 WP_MULTISITE=0
+  - WP_VERSION=4.1 WP_MULTISITE=1
   - WP_VERSION=4.0 WP_MULTISITE=0
+  - WP_VERSION=4.0 WP_MULTISITE=1
   - WP_VERSION=3.9.2 WP_MULTISITE=0
-  - WP_VERSION=3.5 WP_MULTISITE=0
+  - WP_VERSION=3.9.2 WP_MULTISITE=1
+
+git:
+  depth: 1
 
 before_script:
   - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
