--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,24 @@ env:
 git:
   depth: 1
 
-before_script:
-  - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+install:
+  - pip install --user codecov
+  # set up WP install
+  - export WP_DEVELOP_DIR=/tmp/wordpress/
+  - mkdir -p $WP_DEVELOP_DIR
+  - cd $WP_DEVELOP_DIR
+  - git clone --depth=1 git://develop.git.wordpress.org/ .
+  # set up tests config
+  - cp wp-tests-config-sample.php wp-tests-config.php
+  - sed -i "s/youremptytestdbnamehere/wordpress_test/" wp-tests-config.php
+  - sed -i "s/yourusernamehere/root/" wp-tests-config.php
+  - sed -i "s/yourpasswordhere//" wp-tests-config.php
+  # set up database
+  - mysql -e 'CREATE DATABASE wordpress_test;' -uroot
 
 script:
-  - phpunit
+  - cd $TRAVIS_BUILD_DIR
+  - phpunit --coverage-clover=coverage.xml
+
+after_success:
+  - codecov
