--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,16 @@ matrix:
   fast_finish: true
 
 env:
-  - WP_VERSION=latest WP_MULTISITE=0
-  - WP_VERSION=latest WP_MULTISITE=1
-  - WP_VERSION=4.1 WP_MULTISITE=0
-  - WP_VERSION=4.1 WP_MULTISITE=1
-  - WP_VERSION=4.0 WP_MULTISITE=0
-  - WP_VERSION=4.0 WP_MULTISITE=1
+  # trunk:
+  - WP_VERSION=master WP_MULTISITE=0
+  - WP_VERSION=master WP_MULTISITE=1
+  # latest stable:
+  - WP_VERSION=4.3.1 WP_MULTISITE=0
+  - WP_VERSION=4.3.1 WP_MULTISITE=1
+  # previous stable:
+  - WP_VERSION=4.2.5 WP_MULTISITE=0
+  - WP_VERSION=4.2.5 WP_MULTISITE=1
+  # earliest supported:
   - WP_VERSION=3.9.2 WP_MULTISITE=0
   - WP_VERSION=3.9.2 WP_MULTISITE=1
 
@@ -46,7 +50,12 @@ install:
 
 script:
   - cd $TRAVIS_BUILD_DIR
-  - phpunit --coverage-clover=coverage.xml
+  - |
+    if [[ "$TRAVIS_PHP_VERSION" == "5.6" && "$WP_VERSION" == "latest" && "$WP_MULTISITE" == "0" ]] ; then
+        phpunit --coverage-clover=coverage.xml
+    else
+        phpunit
+    fi
 
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
