--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,14 @@ env:
   - WP_VERSION=3.9.2 WP_MULTISITE=0
   - WP_VERSION=3.9.2 WP_MULTISITE=1
 
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/cdf78658f24e0dac7ee0
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
+
 git:
   depth: 1
 
