--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ env:
   - WP_VERSION=3.9.2 WP_MULTISITE=1
 
 notifications:
+  email: false,
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/cdf78658f24e0dac7ee0
