--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,6 @@ php:
   - 5.3
   - hhvm
 
-matrix:
-  allow_failures:
-    - php: hhvm
-  fast_finish: true
-
 env:
   # trunk:
   - WP_VERSION=master WP_MULTISITE=0
@@ -25,24 +20,27 @@ env:
   # earliest supported:
   - WP_VERSION=3.9.2 WP_MULTISITE=0
 
-notifications:
-  email: false,
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/cdf78658f24e0dac7ee0
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: never     # options: [always|never|change] default: always
+matrix:
+  allow_failures:
+    - php: hhvm
+  fast_finish: true
+
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
 
 git:
   depth: 1
 
 install:
+  - composer install --no-interaction
+
+before_script:
   # set up WP install
   - export WP_DEVELOP_DIR=/tmp/wordpress/
-  - mkdir -p $WP_DEVELOP_DIR
-  - cd $WP_DEVELOP_DIR
-  - git clone --depth=1 git://develop.git.wordpress.org/ .
+  - git clone --depth=1 --branch="$WP_VERSION" git://develop.git.wordpress.org/ "$WP_DEVELOP_DIR"
+  - cd "$WP_DEVELOP_DIR"
   # set up tests config
   - cp wp-tests-config-sample.php wp-tests-config.php
   - sed -i "s/youremptytestdbnamehere/wordpress_test/" wp-tests-config.php
@@ -62,3 +60,12 @@ script:
 
 after_success:
   - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
+
+notifications:
+  email: false
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/cdf78658f24e0dac7ee0
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
