--- a/.travis.yml
+++ b/.travis.yml
@@ -2,28 +2,33 @@ sudo: false
 
 language: php
 
-php:
-  - 7.0
-  - 5.6
-  - 5.5
-  - 5.4
-  - 5.3
-  - hhvm
-
-env:
-  # trunk:
-  - WP_VERSION=master WP_MULTISITE=0
-  # latest stable:
-  - WP_VERSION=4.6 WP_MULTISITE=0
-  # previous stable:
-  - WP_VERSION=4.5.3 WP_MULTISITE=0
-  # earliest supported:
-  - WP_VERSION=3.9.2 WP_MULTISITE=0
-
 matrix:
+  fast_finish: true
   allow_failures:
     - php: hhvm
-  fast_finish: true
+  include:
+    - php: 7.0
+      env: WP_VERSION=master COVERAGE=1 # trunk
+    - php: 5.3
+      env: WP_VERSION=3.9.2 # earliest supported
+    - php: 7.0
+      env: WP_VERSION=4.6
+    - php: 7.0
+      env: WP_VERSION=4.5.3
+    - php: 7.0
+      env: WP_VERSION=4.4.4
+    - php: 7.0
+      env: WP_VERSION=4.3.5
+    - php: 5.6
+      env: WP_VERSION=4.6
+    - php: 5.5
+      env: WP_VERSION=4.6
+    - php: 5.4
+      env: WP_VERSION=4.6
+    - php: 5.3
+      env: WP_VERSION=4.6
+    - php: hhvm
+      env: WP_VERSION=4.6
 
 cache:
   directories:
@@ -39,7 +44,7 @@ install:
 before_script:
   # set up WP install
   - export WP_DEVELOP_DIR=/tmp/wordpress/
-  - git clone --depth=1 --branch="$WP_VERSION" git://develop.git.wordpress.org/ "$WP_DEVELOP_DIR"
+  - git clone --depth=1 git://develop.git.wordpress.org/ "$WP_DEVELOP_DIR"
   - cd "$WP_DEVELOP_DIR"
   # set up tests config
   - cp wp-tests-config-sample.php wp-tests-config.php
@@ -50,16 +55,11 @@ before_script:
   - mysql -e 'CREATE DATABASE wordpress_test;' -uroot
 
 script:
-  - cd $TRAVIS_BUILD_DIR
-  - |
-    if [[ "$TRAVIS_PHP_VERSION" == "7.0" && "$WP_VERSION" == "master" && "$WP_MULTISITE" == "0" ]] ; then
-        phpunit --coverage-clover=coverage.xml
-    else
-        phpunit
-    fi
+  - cd "$TRAVIS_BUILD_DIR"
+  - if [[ "$COVERAGE" == "1" ]]; then phpunit --coverage-clover=coverage.xml; else phpunit; fi
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
+  - if [[ "$COVERAGE" == "1" ]]; then bash <(curl -s https://codecov.io/bash); fi
 
 notifications:
   email: false
