--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
     "require": {
+        "php": ">=5.3",
         "league/html-to-markdown": "^4.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8"
     }
 }
