--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,6 @@ language: php
 env: WP_VERSION=4.7
 
 matrix:
-  fast_finish: true
-  allow_failures:
-    - php: hhvm
   include:
     - php: 5.3
       env: WP_VERSION=3.9.2 DEPS=low # earliest supported
@@ -18,14 +15,15 @@ matrix:
     - php: 7.1
       env: WP_VERSION=4.5
     - php: 7.1
-      env: WP_VERSION=4.4
-    - php: 7.1
     - php: 7.0
     - php: 5.6
     - php: 5.5
     - php: 5.4
     - php: 5.3
     - php: hhvm
+  allow_failures:
+    - php: hhvm
+  fast_finish: true
 
 cache:
   directories:
@@ -41,8 +39,9 @@ install:
 
 before_script:
   # set up WP install
-  - mkdir -p /tmp/wordpress && cd /tmp/wordpress
-  - git clone --depth=1 --branch="$WP_VERSION" git://develop.git.wordpress.org/ .
+  - export WP_DEVELOP_DIR=/tmp/wordpress/
+  - git clone --depth=1 --branch="$WP_VERSION" git://develop.git.wordpress.org/ "$WP_DEVELOP_DIR"
+  - cd "$WP_DEVELOP_DIR"
   # set up tests config
   - mv wp-tests-config-sample.php wp-tests-config.php
   - sed -i "s/youremptytestdbnamehere/wordpress_test/" wp-tests-config.php
@@ -53,12 +52,8 @@ before_script:
 
 script:
   - cd "$TRAVIS_BUILD_DIR"
-  - if [[ "$COVERAGE" == "1" ]]; then phpunit --coverage-clover=coverage.xml; else phpunit; fi
-
-script:
-    - if [[ "$cov" == "1" ]] ; then composer test-cov; fi
-    - if [[ "$cov" != "1" ]] ; then composer test; fi
-
+  - if [[ "$COVERAGE" == "1" ]] ; then composer test-cov; fi
+  - if [[ "$COVERAGE" != "1" ]] ; then composer test; fi
 
 after_success:
   - if [[ "$COVERAGE" == "1" ]]; then bash <(curl -s https://codecov.io/bash); fi
