--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,13 @@
     "league/html-to-markdown": "^4.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.5.*",
-    "jakub-onderka/php-parallel-lint": "0.9.*"
+    "phpunit/phpunit": "^4.8",
+    "jakub-onderka/php-parallel-lint": "0.9"
+  },
+  "autoload": {
+    "classmap": [
+      "lib/"
+    ]
   },
   "scripts": {
     "test": [
