--- a/.travis.yml
+++ b/.travis.yml
@@ -2,33 +2,30 @@ sudo: false
 
 language: php
 
+env: WP_VERSION=4.7
+
 matrix:
   fast_finish: true
   allow_failures:
     - php: hhvm
   include:
-    - php: 7.0
+    - php: 5.3
+      env: WP_VERSION=3.9.2 DEPS=low # earliest supported
+    - php: 7.1
       env: WP_VERSION=master COVERAGE=1 # trunk
-    - php: 5.3
-      env: WP_VERSION=3.9.2 # earliest supported
-    - php: 7.0
+    - php: 7.1
       env: WP_VERSION=4.6
+    - php: 7.1
+      env: WP_VERSION=4.5
+    - php: 7.1
+      env: WP_VERSION=4.4
+    - php: 7.1
     - php: 7.0
-      env: WP_VERSION=4.5.3
-    - php: 7.0
-      env: WP_VERSION=4.4.4
-    - php: 7.0
-      env: WP_VERSION=4.3.5
     - php: 5.6
-      env: WP_VERSION=4.6
     - php: 5.5
-      env: WP_VERSION=4.6
     - php: 5.4
-      env: WP_VERSION=4.6
     - php: 5.3
-      env: WP_VERSION=4.6
     - php: hhvm
-      env: WP_VERSION=4.6
 
 cache:
   directories:
@@ -39,15 +36,15 @@ git:
   depth: 1
 
 install:
-  - composer install --no-interaction
+  - if [ "$DEPS" == "low" ]; then composer update --prefer-source --prefer-lowest --prefer-stable; fi
+  - if [ "$DEPS" != "low" ]; then composer install --prefer-source; fi
 
 before_script:
   # set up WP install
-  - export WP_DEVELOP_DIR=/tmp/wordpress/
-  - git clone --depth=1 git://develop.git.wordpress.org/ "$WP_DEVELOP_DIR"
-  - cd "$WP_DEVELOP_DIR"
+  - mkdir -p /tmp/wordpress && cd /tmp/wordpress
+  - git clone --depth=1 --branch="$WP_VERSION" git://develop.git.wordpress.org/ .
   # set up tests config
-  - cp wp-tests-config-sample.php wp-tests-config.php
+  - mv wp-tests-config-sample.php wp-tests-config.php
   - sed -i "s/youremptytestdbnamehere/wordpress_test/" wp-tests-config.php
   - sed -i "s/yourusernamehere/root/" wp-tests-config.php
   - sed -i "s/yourpasswordhere//" wp-tests-config.php
@@ -57,6 +54,11 @@ before_script:
 script:
   - cd "$TRAVIS_BUILD_DIR"
   - if [[ "$COVERAGE" == "1" ]]; then phpunit --coverage-clover=coverage.xml; else phpunit; fi
+
+script:
+    - if [[ "$cov" == "1" ]] ; then composer test-cov; fi
+    - if [[ "$cov" != "1" ]] ; then composer test; fi
+
 
 after_success:
   - if [[ "$COVERAGE" == "1" ]]; then bash <(curl -s https://codecov.io/bash); fi
