--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,20 @@
 {
-    "require": {
-        "php": ">=5.3",
-        "league/html-to-markdown": "^4.2"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^4.8"
-    }
+  "require": {
+    "php": ">=5.3.0",
+    "league/html-to-markdown": "^4.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.5.*",
+    "jakub-onderka/php-parallel-lint": "0.9.*"
+  },
+  "scripts": {
+    "test": [
+      "parallel-lint . --exclude vendor",
+      "phpunit"
+    ],
+    "test-cov": [
+      "parallel-lint . --exclude vendor",
+      "phpunit --coverage-clover=coverage.xml"
+    ]
+  }
 }
