--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
   ],
   "require": {
     "php": "^5.4|^7.0",
-    "league/html-to-markdown": "^4.3"
+    "league/html-to-markdown": "^4.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8|^5.6",
-    "jakub-onderka/php-parallel-lint": "0.9"
+    "jakub-onderka/php-parallel-lint": "^0.9"
   },
   "autoload": {
     "classmap": [
