--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "league/html-to-markdown": "^4.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8|^5.6",
+    "phpunit/phpunit": "^4.8|^5.7|^6.2",
     "jakub-onderka/php-parallel-lint": "^0.9"
   },
   "autoload": {
