Introduce WP2D_ENC_KEY for password encryption. Monitor for AUTH_KEY changes.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,4 +9,7 @@
 			<directory suffix=".php">.</directory>
 		</whitelist>
 	</filter>
+	<php>
+		<const name="AUTH_KEY" value="put your unique phrase here"/>
+	</php>
 </phpunit>
