--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,13 @@
   "name": "diasphpora/wp-to-diaspora",
   "type": "wordpress-plugin",
   "description": "Share WordPress posts on diaspora*",
-  "keywords": ["wordpress", "posts", "diaspora", "social", "sharing"],
+  "keywords": [
+    "wordpress",
+    "posts",
+    "diaspora",
+    "social",
+    "sharing"
+  ],
   "license": "GPL-2.0",
   "homepage": "https://github.com/DiasPHPora/wp-to-diaspora",
   "support": {
@@ -24,12 +30,16 @@
     }
   ],
   "require": {
-    "php": "^5.4|^7.0",
-    "league/html-to-markdown": "^4.8"
+    "php": "^7.2",
+    "league/html-to-markdown": "^4.9"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8|^5.7|^6.5",
-    "jakub-onderka/php-parallel-lint": "^1.0"
+    "phpunit/phpunit": "^7.5",
+    "php-parallel-lint/php-parallel-lint": "^1.2",
+    "wp-coding-standards/wpcs": "^2.3",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
+    "phpcompatibility/phpcompatibility-wp": "^2.1",
+    "symfony/var-dumper": "^5.1"
   },
   "autoload": {
     "classmap": [
@@ -37,13 +47,15 @@
     ]
   },
   "scripts": {
+    "check-code": [
+      "./vendor/bin/parallel-lint . --exclude vendor",
+      "./vendor/bin/phpcs"
+    ],
     "test": [
-      "parallel-lint . --exclude vendor",
-      "phpunit"
+      "./vendor/bin/phpunit"
     ],
     "test-cov": [
-      "parallel-lint . --exclude vendor",
-      "phpunit --coverage-clover=coverage.xml"
+      "./vendor/bin/phpunit --coverage-clover=coverage.xml"
     ]
   }
 }
