Adhere to WP coding standards, update project config files.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -19,4 +19,5 @@ tools:
 
   php_mess_detector:
     config:
-      controversial_rules: { superglobals: false }
+      controversial_rules:
+        superglobals: false
