--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
   ],
   "require": {
     "php": "^8.0",
+    "guzzlehttp/guzzle": "^7.5",
     "league/html-to-markdown": "^5.1"
   },
   "require-dev": {
