--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "wp-coding-standards/wpcs": "^2.3",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
     "phpcompatibility/phpcompatibility-wp": "^2.1",
-    "symfony/var-dumper": "^5.4"
+    "symfony/var-dumper": "^5.4",
+    "spatie/invade": "^1.1"
   },
   "autoload": {
     "classmap": [
