--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,7 @@
     }
   ],
   "require": {
-    "php": "^8.0",
-    "guzzlehttp/guzzle": "^7.8",
-    "league/html-to-markdown": "^5.1"
+    "php": "^8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6",
@@ -42,7 +40,9 @@
     "phpcompatibility/phpcompatibility-wp": "^2.1",
     "symfony/var-dumper": "^5.4",
     "spatie/invade": "^2.0",
-    "bamarni/composer-bin-plugin": "^1.8"
+    "bamarni/composer-bin-plugin": "^1.8",
+    "guzzlehttp/guzzle": "^7.8",
+    "league/html-to-markdown": "^5.1"
   },
   "autoload": {
     "classmap": [
