--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
+        tools: phpunit-polyfills
 
     - name: Install WordPress
       run: |
@@ -51,6 +52,7 @@ jobs:
         cd "$WP_DEVELOP_DIR"
         # set up tests config
         mv wp-tests-config-sample.php wp-tests-config.php
+        sed -i "s/localhost/127.0.0.1/" wp-tests-config.php
         sed -i "s/youremptytestdbnamehere/wordpress_test/" wp-tests-config.php
         sed -i "s/yourusernamehere/root/" wp-tests-config.php
         sed -i "s/yourpasswordhere/root/" wp-tests-config.php
@@ -82,6 +84,7 @@ jobs:
         composer install --prefer-dist --no-progress
         composer bin build install
         composer compose
+        composer dump-autoload --dev
 
     - name: Check PHP code
       run: composer check-code
