--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "spatie/invade": "^2.0",
     "bamarni/composer-bin-plugin": "^1.8",
     "guzzlehttp/guzzle": "^7.8",
-    "league/html-to-markdown": "^5.1"
+    "league/html-to-markdown": "^5.1",
+    "yoast/phpunit-polyfills": "^2.0"
   },
   "autoload": {
     "classmap": [
